# lol-inline-assets-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: css.rs  lib.rs
tests/: basic.rs  nested.rs
tests/fixtures/: css-nested-withurl.html  css-nested-withurl.inlined.html  css-nested.html  css-nested.inlined-withurl.html  css-nested.inlined.html  css.html  css.inlined.html  html-d3.html  html-include.html  html-include.inlined.html  image_jpg.html  image_jpg.inlined.html  image_png.html  image_png.inlined.html  image_svg.html  image_svg.inlined.html  javascript.html  javascript.inlined.html
tests/fixtures/assets/: import.css  style.css  url.css
tests/fixtures/assets/css/: url.css
tests/fixtures/assets/css/shared/: fonts.css
tests/fixtures/assets/js/: include.js
