[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
description = "Inline external scripts, styles and images in HTML files using Cloudflare's lol-html."
edition = "2021"
license = "MIT"
name = "lol-inline-assets"
repository = "https://github.com/fcoury/lol-inline-assets-rs"
version = "0.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
lol_html = "0.3.1"
mime_guess = "2.0.4"
regex = "1.6.0"

[dev-dependencies]
